Fix section contact

--- a/index.html
+++ b/index.html
@@ -377,16 +377,14 @@
                     </h2>
                     <div class="contact__description">
                         <p class="contact__description-1">
-                                Por este medio de correo electrónico, podrás comunicarte con migo de una forma más directa, segura y acertiva;
-                                 en donde con el mayor de los gustos estaré dispuesto a contestarte.
+                                Aquí podrás comunicarte de manera directa, y acertiva;
+                                 y con el mayor de los gustos estaré dispuesto a contestarte.
                         </p>
             
                         <p class="contact__description-2">
-                            Si requiere alguna más información más detallada sobre mi perfil profesional o tiene alguna duda inquietud, 
-                            estaría agradecido de que se me pueda trasmitir;<strong> muchas gracias y estamos en contacto!!!</strong>                </p>
+                            Para alguna duda, estaría agradecido de que se me pueda trasmitir;<strong> muchas gracias y estamos en contacto!!!</strong>
+                        </p>
                     </div>
-
-                    <div class="geometric-box"></div>
                 </div>
 
                 </div>               
