Fix about tablet 2parte

--- a/index.html
+++ b/index.html
@@ -141,18 +141,21 @@
                             en el <strong>logro de objetivos claros</strong>; aprendo rápido, cumplo de manera adecuada con puntualidad, 
                             honestidad y responsabilidad en las distintas actividades que realizo. 
                     </p>
-                    <p class="about__description-2">
+                    <details>
+                        <summary>Leer más</summary>
+                        <p class="about__description-2">
                             Actualmente soy graduado de Ingeniería de Sistemas, 
                             donde luego he podido fortalecer mis habilidades y destrezas en varios
                             campos tales como: Desarrollo de software, Redes y 
                             telecomunicaciones, Soporte Técnico, Seguridad Informática, Gestión de proyectos, etc.
-                    </p>
-                    <ul class="about__list">
-                        <li class="about__item">
+                        </p>
+                    </details class="about__details">
+
+                        <p class="about__item">
                             <b>Mis habilidades son:</b>
-                            Html, Css, JavaScript, Git & GitHub, React, Node, sql, Mysql, PostgresSql
-                        </li>
-                    </ul>
+                            JavaScript, React, Node, sql, Mysql, PostgresSql, Git & GitHub, Html, Css
+                        </p>
+
                     <div class="about__buttons">
                         <a href="#contact" class="button">
                             <i class="ri-contacts-line"></i>Contacto
