Dark Mode 1Parte

--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
     <link rel="stylesheet" href="assets/css/styles.css">  
 
     <!--=============== JS ===============-->
-    <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
-    <script type="text/javascript">
-     emailjs.init('mEM0k1SRHzeKj_zJs')
-    </script>
-
+    <script type="text/javascript"> emailjs.init('mEM0k1SRHzeKj_zJs') </script>
 
     <script type="module" src="assets/js/main.js" defer></script>
 
@@ -63,15 +59,18 @@
                 </div>             
             </div>
 
-            <div class="nav__buttons">
-                <!-- Toggle button Menú-->
+            
+            <div class="toogle__moon">
                 <i class="ri-moon-line change-theme" id="theme-button"></i>
-                
+            </div>
+
+            <div class="nav__buttons">
+                <!-- Toggle button Menú-->             
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="ri-menu-fill"></i>
                 </div>
-
             </div>
+
         </nav>
     </header>
 
