fix 3parte dark mode

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Portafolio Enmanuel Ochoa</title>
 </head>
-<body>
+<body class="dark">
     <header class="header" id="header">
         <!--=============== NAV ===============-->
         <nav class="nav container">
@@ -61,7 +61,7 @@
 
             
             <div class="toogle__moon">
-                <i class="ri-moon-line change-theme" id="theme-button"></i>
+                <i class="ri-moon-line"></i>
             </div>
 
             <div class="nav__buttons">
