Fix change icon dark mode and fix the localStorage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
 
             <div class="toogle__moon">
-                <i class="ri-moon-line"></i>
+                <!-- <i class="ri-moon-line"></i> -->
             </div>
             
             <div class="nav__menu" id="nav-menu">
