Add Sweeft Alert + reset form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">  
 
+    <!--=============== INCULIR SWEET ALERT CSS ===============-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+    <!--=============== INCULIR SWEET ALERT JS ===============-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+
     <!--=============== JS ===============-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
@@ -421,7 +427,7 @@
                         </div>
     
                         <div class="form__group">
-                            <input type="text" name="user_subject" class="contact__input" id="user_subject" placeholder="Subject" required>
+                            <input type="text" name="user_subject" class="contact__input" id="user_subject" placeholder="Asunto" required>
                             <label for="subject" class="contact__label">Asunto</label>
                             <span class="form__line"></span>
                         </div>
