Add active menu

--- a/index.html
+++ b/index.html
@@ -50,14 +50,21 @@
                 <ul class="nav__list">
 
                     <li class="nav-item">
-                        <a href="#home" class="nav__link item-home">Inicio</a>
+                        <a href="#home" class="nav__link item-home active">Inicio</a>
                     </li>
+
                     <li class="nav-item">
                         <a href="#about" class="nav__link item-about">Acerca de Mi</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="#studie" class="nav__link item-studie">Estudios</a>
+                    </li>
+
                     <li class="nav-item">
                         <a href="#projects" class="nav__link  item-project">Proyectos</a>
                     </li>
+
                     <li class="nav-item">
                         <a href="#contact" class="nav__link item-contact">Contacto</a>
                     </li>
@@ -177,7 +184,7 @@
     </section>                          
 
     <!--=============== Studies ===============-->
-    <section class="studies__section">
+    <section class="studies__section" id="studie">
                     <h2 class="section__title-2">
                         <span>Estudios.</span>
                     </h2>
@@ -415,7 +422,7 @@
     <!--=============== FORM ===============-->
         
         <div class="form__main">
-            <section class="form__section">
+            <article class="form__section">
 
                 <form action="" class="form" id="contact-form">
                     <h2 class="form__header">
@@ -460,7 +467,7 @@
                     <button type="submit" id="button" value="Send Email" class="form__button" placeholder="Enviar">Enviar</button>
     
                 </form>          
-            </section>
+            </article>
         </div>
     </main>
 
