--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <div class="home__info">
                     <p class="home__description">
                         Soy Ingeniero de Sistemas enfocado en el <b>"Diseño y Desarrollo de Software"</b>
-                        para aplicaciones tipo web, me desmpeño como programador "Full Stack" en tecnologías
-                        como: <k>React</k> en el ámbito de FrontEnd y <k>Node</k> en el ámbito de BackEnd.
+                        para aplicaciones tipo web, me desempeño como programador "Full Stack" en tecnologías
+                        como: <b><i>React</i></b> por el lado del Front-End y <b><i>Node Js</i></b> por el Back-End.
                     </p>
 
 
@@ -218,7 +218,7 @@
                                 </h2>
                                 <p class="studies__description">
                                     Graduado en el año 2024 de la academia multinacional de estudios de programación <strong><i>"Academlo"</i> </strong>
-                                    , como FrontEnd Developer en React, obteniendo el título bajo en la modalidad remoto.
+                                    , como FrontEnd Developer en React, obteniendo el título bajo la modalidad remoto.
                                 </p>
                             </div>
                         </article>
@@ -235,7 +235,7 @@
                                 </h2>
                                 <p class="studies__description">
                                     Graduado en el año 2024 de la academia multinacional de estudios de programación <strong><i>"Academlo"</i> </strong>
-                                    , como BackEnd Developer en Node, obteniendo el título bajo en la modalidad remoto.
+                                    , como BackEnd Developer en Node, obteniendo el título bajo la modalidad remoto.
                                 </p>
                             </div>
                         </article>
